--- a/lib/meson.build
+++ b/lib/meson.build
@@ -2,6 +2,7 @@ libdspy_sources = [
   'dspy-connection.c',
   'dspy-introspection-model.c',
   'dspy-method-invocation.c',
+  'dspy-method-view.c',
   'dspy-name.c',
   'dspy-name-marquee.c',
   'dspy-name-row.c',
