lib: add new DspyConnectionButton
This will allow us to add warnings to DspyConnection so the user is aware
of the status.

--- a/lib/meson.build
+++ b/lib/meson.build
@@ -1,5 +1,6 @@
 libdspy_sources = [
   'dspy-connection.c',
+  'dspy-connection-button.c',
   'dspy-introspection-model.c',
   'dspy-method-invocation.c',
   'dspy-method-view.c',
