build: remove use of libdazzle
This will simplify things as we move towards GTK 4. We have imported a few
bits from libdazzle to get things going as we start porting.

--- a/lib/meson.build
+++ b/lib/meson.build
@@ -1,15 +1,21 @@
 libdspy_sources = [
+  'dspy-binding-group.c',
   'dspy-connection.c',
   'dspy-connection-button.c',
+  'dspy-empty-state.c',
   'dspy-introspection-model.c',
+  'dspy-list-model-filter.c',
   'dspy-method-invocation.c',
   'dspy-method-view.c',
+  'dspy-multi-paned.c',
   'dspy-name.c',
   'dspy-name-marquee.c',
   'dspy-name-row.c',
   'dspy-names-model.c',
   'dspy-node.c',
+  'dspy-pattern-spec.c',
   'dspy-signature.c',
+  'dspy-simple-popover.c',
   'dspy-tree-view.c',
   'dspy-view.c',
 ]
@@ -17,7 +23,6 @@ libdspy_sources = [
 libdspy_deps = [
   libgio_dep,
   libgtk_dep,
-  libdazzle_dep,
 ]
 
 libdspy_sources += gnome.compile_resources('libdspy-resources', 'libdspy.gresource.xml',
