build: cleanup flatpak manifest and rename exec to d-spy

--- a/data/org.gnome.dspy.desktop.in.in
+++ b/data/org.gnome.dspy.desktop.in.in
@@ -1,6 +1,6 @@
 [Desktop Entry]
 Categories=GNOME;GTK;Development;
-Exec=dspy
+Exec=d-spy
 Icon=@app_id@
 Name=D-Spy
 Comment=Discover and explore D-Bus services
