--- a/src/meson.build
+++ b/src/meson.build
@@ -14,7 +14,7 @@ dspy_sources += gnome.compile_resources('dspy-resources', 'dspy.gresource.xml',
   c_name: 'dspy'
 )
 
-dspy = executable('dspy', dspy_sources,
+dspy = executable('d-spy', dspy_sources,
          dependencies: dspy_deps,
               install: true,
   include_directories: root_include_directory,
