--- a/data/meson.build
+++ b/data/meson.build
@@ -41,9 +41,8 @@ appstream_file = i18n.merge_file(
 
 appstream_util = find_program('appstream-util', required: false)
 if appstream_util.found()
-  test('Validate appstream file', appstream_util,
-    args: ['validate', appstream_file]
-  )
+  validate_args = ['validate-relax', appstream_file]
+  test('Validate appstream file', appstream_util, args: validate_args)
 endif
 
 install_data('org.gnome.dspy.gschema.xml',
