--- a/data/org.gnome.dspy.appdata.xml.in.in
+++ b/data/org.gnome.dspy.appdata.xml.in.in
@@ -24,6 +24,7 @@
   </screenshots>
 
   <releases>
+    <release version="42.0" date="2022-03-18"/>
     <release version="41.0" date="2021-09-17"/>
   </releases>
 
