--- a/data/org.gnome.dspy.appdata.xml.in.in
+++ b/data/org.gnome.dspy.appdata.xml.in.in
@@ -24,8 +24,7 @@
   </screenshots>
 
   <releases>
-    <release version="42.1" date="2022-07-11"/>
-    <release version="42.0" date="2022-03-18"/>
+    <release version="44.beta" date="2023-02-20"/>
   </releases>
 
   <kudos>
