--- a/data/org.gnome.dspy.appdata.xml.in.in
+++ b/data/org.gnome.dspy.appdata.xml.in.in
@@ -24,7 +24,7 @@
   </screenshots>
 
   <releases>
-    <release version="44.beta" date="2023-02-20"/>
+    <release version="44.0" date="2023-03-17"/>
   </releases>
 
   <kudos>
