po: Update appdata/desktop input filenames
These now have two levels of generation, because the app ID varies
between builds.

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,5 +1,5 @@
-data/org.gnome.dspy.appdata.xml.in
-data/org.gnome.dspy.desktop.in
+data/org.gnome.dspy.appdata.xml.in.in
+data/org.gnome.dspy.desktop.in.in
 data/org.gnome.dspy.gschema.xml
 lib/dspy-method-view.ui
 lib/dspy-name-marquee.ui
