--- a/data/org.gnome.dspy.desktop.in.in
+++ b/data/org.gnome.dspy.desktop.in.in
@@ -4,6 +4,7 @@ Exec=d-spy
 Icon=@app_id@
 Name=D-Spy
 Comment=Discover and explore D-Bus services
+Keywords=dbus;
 StartupNotify=true
 Terminal=false
 Type=Application
