Add `dspy` to keywords
This is so the app will show up when searching for it in the overview

--- a/data/org.gnome.dspy.desktop.in.in
+++ b/data/org.gnome.dspy.desktop.in.in
@@ -4,7 +4,7 @@ Exec=d-spy
 Icon=@app_id@
 Name=D-Spy
 Comment=Discover and explore D-Bus services
-Keywords=dbus;
+Keywords=dspy;dbus;
 StartupNotify=true
 Terminal=false
 Type=Application
