--- a/data/org.gnome.dspy.appdata.xml.in.in
+++ b/data/org.gnome.dspy.appdata.xml.in.in
@@ -14,7 +14,9 @@
 
   <url type="homepage">https://gitlab.gnome.org/chergert/d-spy</url>
   <url type="bugtracker">https://gitlab.gnome.org/chergert/d-spy/issues</url>
-  <url type="donation">http://www.gnome.org/friends/</url>
+  <url type="donation">https://www.gnome.org/donate/</url>
+  <url type="translate">https://l10n.gnome.org/module/d-spy/</url>
+  <url type="vcs-browser">https://gitlab.gnome.org/chergert/d-spy</url>
 
   <screenshots>
     <screenshot type="default">
