--- a/data/org.gnome.dspy.appdata.xml.in.in
+++ b/data/org.gnome.dspy.appdata.xml.in.in
@@ -3,7 +3,11 @@
   <id>@app_id@.desktop</id>
   <metadata_license>CC0-1.0</metadata_license>
   <project_license>GPL-3.0-or-later</project_license>
-  <developer id="gnome.org"><name>Christian Hergert, et al.</name></developer>
+  <!-- developer_name tag deprecated with Appstream 1.0 -->
+  <developer_name>Christian Hergert, et al.</developer_name>
+  <developer id="gnome.org">
+    <name>Christian Hergert, et al.</name>
+  </developer>
   <launchable type="desktop-id">org.gnome.dspy.desktop</launchable>
   <translation type="gettext">d-spy</translation>
   <provides><binary>d-spy</binary></provides>
