--- a/data/org.gnome.dspy.appdata.xml.in.in
+++ b/data/org.gnome.dspy.appdata.xml.in.in
@@ -32,6 +32,7 @@
   </screenshots>
 
   <releases>
+    <release version="46.0" date="2024-03-15"/>
     <release version="44.0" date="2023-03-17"/>
   </releases>
 
