build: add -Dbuilder=true when bundling with Builder
The goal here is to be able to have applications exposed as part of Builder
so that it doesn't have to go through the madness of using libdspy-1 just
to embed things in a workspace window.

--- a/data/icons/hicolor/meson.build
+++ b/data/icons/hicolor/meson.build
@@ -1,4 +1,11 @@
-icondir = join_paths(get_option('datadir'), 'icons/hicolor')
+icondir = join_paths(get_option('datadir'), 'icons', 'hicolor')
+symbolicdir = join_paths(icondir, 'symbolic', 'apps')
+scalabledir = join_paths(icondir, 'scalable', 'apps')
 
-install_subdir('scalable', install_dir: icondir)
-install_subdir('symbolic', install_dir: icondir)
+if get_option('development')
+  install_data('dspy-devel.svg', rename: '@0@.svg'.format(app_id), install_dir: scalabledir)
+else
+  install_data('dspy.svg', rename: '@0@.svg'.format(app_id), install_dir: scalabledir)
+endif
+
+install_data('dspy-symbolic.svg', rename: '@0@-symbolic.svg'.format(app_id), install_dir: symbolicdir)
