--- a/data/org.gnome.dspy.appdata.xml.in.in
+++ b/data/org.gnome.dspy.appdata.xml.in.in
@@ -4,9 +4,9 @@
   <metadata_license>CC0-1.0</metadata_license>
   <project_license>GPL-3.0-or-later</project_license>
   <!-- developer_name tag deprecated with Appstream 1.0 -->
-  <developer_name>Christian Hergert, et al.</developer_name>
+  <developer_name>Christian Hergert</developer_name>
   <developer id="gnome.org">
-    <name>Christian Hergert, et al.</name>
+    <name>Christian Hergert</name>
   </developer>
   <launchable type="desktop-id">org.gnome.dspy.desktop</launchable>
   <translation type="gettext">d-spy</translation>
