--- a/data/org.gnome.dspy.appdata.xml.in.in
+++ b/data/org.gnome.dspy.appdata.xml.in.in
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <component type="desktop">
-  <id>@app_id@.desktop</id>
+  <id>@app_id@</id>
   <metadata_license>CC0-1.0</metadata_license>
   <project_license>GPL-3.0-or-later</project_license>
   <!-- developer_name tag deprecated with Appstream 1.0 -->
@@ -30,6 +30,11 @@
       <image>https://gitlab.gnome.org/GNOME/d-spy/-/raw/main/data/dspy-1.png</image>
     </screenshot>
   </screenshots>
+  
+  <branding>
+    <color type="primary" scheme_preference="light">#aea382</color>
+    <color type="primary" scheme_preference="dark">#6d6953</color>
+  </branding>
 
   <releases>
     <release version="47.0" date="2024-09-13"/>
@@ -39,6 +44,16 @@
     <!-- kudo>HiDpiIcon</kudo -->
     <kudo>ModernToolkit</kudo>
   </kudos>
+  
+  <requires>
+    <display_length compare="ge">360</display_length>
+  </requires>
+  
+  <supports>
+    <control>pointing</control>
+    <control>keyboard</control>
+    <control>touch</control>
+  </supports>
 
   <content_rating type="oars-1.1" />
 
