--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,10 +1,19 @@
-include: 'https://gitlab.gnome.org/GNOME/citemplates/raw/master/flatpak/flatpak_ci_initiative.yml'
+include:
+    - project: "gnome/citemplates"
+      file: "flatpak/flatpak_ci_initiative.yml"
+    - component: "gitlab.gnome.org/GNOME/citemplates/release-service@master"
+      inputs:
+        dist-job-name: "flatpak"
+        tarball-artifact-path: "${TARBALL_ARTIFACT_PATH}"
+
+variables:
+    FLATPAK_MODULE: "d-spy"
+    TARBALL_ARTIFACT_PATH: ".flatpak-builder/build/${FLATPAK_MODULE}/_flatpak_build/meson-dist/${CI_PROJECT_NAME}-${CI_COMMIT_TAG}.tar.xz"
 
 flatpak:
     variables:
         MANIFEST_PATH: "org.gnome.dspy.devel.json"
         MESON_ARGS: "-Ddevelopment=true"
-        FLATPAK_MODULE: "d-spy"
         APP_ID: "org.gnome.dspy.devel"
         RUNTIME_REPO: "https://nightly.gnome.org/gnome-nightly.flatpakrepo"
         BUNDLE: "org.gnome.dspy.devel.flatpak"
