lib: remove libdspy library
This was only used by Builder and hasn't been used there for a while now.
So just drop the library so that we can iterate on things without being
restricted to an ABI which would go unused.

--- a/src/meson.build
+++ b/src/meson.build
@@ -1,11 +1,27 @@
 dspy_sources = [
-  'main.c',
+  'dspy-binding-group.c',
+  'dspy-connection-button.c',
+  'dspy-connection.c',
+  'dspy-introspection-model.c',
+  'dspy-list-model-filter.c',
+  'dspy-method-invocation.c',
+  'dspy-method-view.c',
+  'dspy-name-marquee.c',
+  'dspy-name-row.c',
+  'dspy-name.c',
+  'dspy-names-model.c',
+  'dspy-node.c',
+  'dspy-pattern-spec.c',
+  'dspy-signature.c',
+  'dspy-simple-popover.c',
+  'dspy-tree-view.c',
+  'dspy-view.c',
   'dspy-window.c',
+  'main.c',
 ]
 
 dspy_deps = [
   libadwaita_dep,
-  libdspy_dep,
   libgio_dep,
   libgtk_dep,
 ]
