--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,17 +1,17 @@
 data/org.gnome.dspy.appdata.xml.in.in
 data/org.gnome.dspy.desktop.in.in
 data/org.gnome.dspy.gschema.xml
-lib/dspy-connection-button.c
-lib/dspy-method-view.c
-lib/dspy-method-view.ui
-lib/dspy-name-marquee.ui
-lib/dspy-name-row.c
-lib/dspy-node.c
-lib/dspy-signature.c
-lib/dspy-tree-view.c
-lib/dspy-view.c
-lib/dspy-view.ui
-lib/gtk/menus.ui
+src/dspy-connection-button.c
+src/dspy-method-view.c
+src/dspy-method-view.ui
+src/dspy-name-marquee.ui
+src/dspy-name-row.c
+src/dspy-node.c
+src/dspy-signature.c
+src/dspy-tree-view.c
+src/dspy-view.c
+src/dspy-view.ui
 src/dspy-window.c
 src/dspy-window.ui
+src/gtk/menus.ui
 src/main.c
