--- a/data/org.gnome.dspy.appdata.xml.in.in
+++ b/data/org.gnome.dspy.appdata.xml.in.in
@@ -37,6 +37,7 @@
   </branding>
 
   <releases>
+    <release version="48.0" date="2025-03-15"/>
     <release version="47.0" date="2024-09-13"/>
   </releases>
 
