Add "new-window" and "version" command-line options
And specify the "new-window" action in the desktop file. This allows
application launchers to provide direct access to this action.

--- a/data/org.gnome.dspy.desktop.in.in
+++ b/data/org.gnome.dspy.desktop.in.in
@@ -9,3 +9,8 @@ StartupNotify=true
 Terminal=false
 Type=Application
 X-Flatpak-RenamedFrom=d-spy
+Actions=new-window;
+
+[Desktop Action new-window]
+Exec=d-spy --new-window
+Name=New Window
