Add D-Bus service file
And mark the application as D-Bus activatable. This allows application
launchers to activate it via D-Bus.

--- a/data/org.gnome.dspy.desktop.in.in
+++ b/data/org.gnome.dspy.desktop.in.in
@@ -5,6 +5,7 @@ Icon=@app_id@
 Name=D-Spy
 Comment=Discover and explore D-Bus services
 Keywords=dspy;dbus;
+DBusActivatable=true
 StartupNotify=true
 Terminal=false
 Type=Application
