introspection: start on using objects for introspection tree
The goal here is to have something we can use with ListModel in a
much more expression'able fashion.

--- a/src/meson.build
+++ b/src/meson.build
@@ -28,6 +28,8 @@ dspy_sources += gnome.compile_resources('dspy-resources', 'dspy.gresource.xml',
   c_name: 'dspy'
 )
 
+subdir('introspection')
+
 build_ident_h = vcs_tag(
      fallback: meson.project_version(),
         input: 'build-ident.h.in',
