introspection: work on basic introspection parsing
The goal is to turn this into an object tree we can use with GListModel.

--- a/src/introspection/meson.build
+++ b/src/introspection/meson.build
@@ -2,9 +2,14 @@ dspy_sources += files([
   'dspy-argument.c',
   'dspy-interface.c',
   'dspy-introspectable.c',
+  'dspy-introspection.c',
   'dspy-method.c',
   'dspy-node.c',
   'dspy-property.c',
   'dspy-signal.c',
   'dspy-titled-model.c',
 ])
+
+dspy_deps += [
+  dependency('libdex-1'),
+]
