build: setup include directories

--- a/src/introspection/meson.build
+++ b/src/introspection/meson.build
@@ -13,3 +13,7 @@ dspy_sources += files([
 dspy_deps += [
   dependency('libdex-1'),
 ]
+
+dspy_include_directories += [
+  include_directories('.'),
+]
