build: add helper to discover host a11y bus

--- a/src/meson.build
+++ b/src/meson.build
@@ -14,6 +14,7 @@ dspy_sources = [
   'dspy-signature.c',
   'dspy-simple-popover.c',
   'dspy-tree-view.c',
+  'dspy-util.c',
   'dspy-view.c',
   'dspy-window.c',
   'main.c',
