--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,26 +1,37 @@
 include:
-    - project: "gnome/citemplates"
-      file: "flatpak/flatpak_ci_initiative.yml"
-    - component: "gitlab.gnome.org/GNOME/citemplates/release-service@master"
-      inputs:
-        dist-job-name: "flatpak"
-        tarball-artifact-path: "${TARBALL_ARTIFACT_PATH}"
+  - project: "gnome/citemplates"
+    file: "flatpak/flatpak_ci_initiative.yml"
 
-variables:
+stages:
+  - "test"
+  - "deploy"
+
+.flatpak_vars:
+  variables:
+    MANIFEST_PATH: "org.gnome.dspy.devel.json"
     FLATPAK_MODULE: "d-spy"
-    TARBALL_ARTIFACT_PATH: ".flatpak-builder/build/${FLATPAK_MODULE}/_flatpak_build/meson-dist/${CI_PROJECT_NAME}-${CI_COMMIT_TAG}.tar.xz"
+    RUNTIME_REPO: "https://nightly.gnome.org/gnome-nightly.flatpakrepo"
+    APP_ID: "org.gnome.dspy.devel"
+  extends: ".flatpak"
 
-flatpak:
-    variables:
-        MANIFEST_PATH: "org.gnome.dspy.devel.json"
-        MESON_ARGS: "-Ddevelopment=true"
-        APP_ID: "org.gnome.dspy.devel"
-        RUNTIME_REPO: "https://nightly.gnome.org/gnome-nightly.flatpakrepo"
-        BUNDLE: "org.gnome.dspy.devel.flatpak"
-    extends: .flatpak
+flatpak@x86_64:
+  extends:
+    - '.flatpak_vars'
+    - '.flatpak@x86_64'
+  variables:
+    BUNDLE: "org.gnome.dspy.devel-x86_64.flatpak"
 
-nightly:
-    extends: '.publish_nightly'
-    needs: ['flatpak']
-    dependencies: ['flatpak']
-    
+flatpak@aarch64:
+  extends:
+    - '.flatpak_vars'
+    - '.flatpak@aarch64'
+  variables:
+    BUNDLE: "org.gnome.dspy.devel-aarch64.flatpak"
+
+nightly@x86_64:
+  extends: ".publish_nightly"
+  needs: ["flatpak@x86_64"]
+
+nightly@aarch64:
+  extends: ".publish_nightly"
+  needs: ["flatpak@aarch64"]
