--- a/data/org.gnome.dspy.metainfo.xml.in.in
+++ b/data/org.gnome.dspy.metainfo.xml.in.in
@@ -37,8 +37,7 @@
   </branding>
 
   <releases>
-    <release version="48.0" date="2025-03-15"/>
-    <release version="47.0" date="2024-09-13"/>
+    <release version="49.rc" date="2025-08-30"/>
   </releases>
 
   <kudos>
