--- a/data/org.gnome.dspy.metainfo.xml.in.in
+++ b/data/org.gnome.dspy.metainfo.xml.in.in
@@ -37,7 +37,7 @@
   </branding>
 
   <releases>
-    <release version="49.rc" date="2025-08-30"/>
+    <release version="49.0" date="2025-09-12"/>
   </releases>
 
   <kudos>
