--- a/data/org.gnome.dspy.metainfo.xml.in.in
+++ b/data/org.gnome.dspy.metainfo.xml.in.in
@@ -37,6 +37,7 @@
   </branding>
 
   <releases>
+    <release version="49.2" date="2025-10-28"/>
     <release version="49.1" date="2025-09-15"/>
     <release version="49.0" date="2025-09-12"/>
   </releases>
